fix(style): overflow on Product details price on card fixed

--- a/client/src/components/UI/ProductDetails.css
+++ b/client/src/components/UI/ProductDetails.css
@@ -35,3 +35,14 @@
         display: grid;
     }
 }
+
+@media screen and (max-width: 520px) {
+    .PD_details {
+        padding: 3px;
+    }
+    
+    .PD_details .PD_prices div, .PD_details .PD_prices {
+        display: grid;
+        gap: 1px;
+    }
+}
